# CSC372

./: README.md
L1/: README.md  configure.ac
L1/src/: Makefile.am  list.c  list.h  main.c  process.h
L1/tests/: Makefile.am  check_lab1.c  check_lab1.h  check_lab1_lifo.c  check_lab1_priority.c  check_lab1_waitlist.c  prioritytest.c
L3/: setup
L3/src/: Makefile.am  debug.c  debug.h  defines.h  exception.c  irq.c  irq.h  kernel.c  kernel.h  list.c  list.h  lock.c  lock.h  main.c  main.h  user.c  user.h
L3/tests/: Makefile.am  check_lab3.c  check_lab3.h  check_lab3_lifo.c  check_lab3_priority.c  check_lab3_waitlist.c
L4/: Makefile.am  README.md  configure.ac
L4/rpi/include/rpi/: audio.h
L4/src/: Makefile.am  audio.c  audio.h  debug.c  defines.h  exception.c  fft.c  fft.h  irq.c  kernel.c  kernel.h  notes.c  notes.h  ringbuffer.c  ringbuffer.h  sensor.c  sensor.h  stack.c  stack.h  user.c  user.h  wave.c  wave.h
L4/tests/: Makefile.am  check_lab4.c  check_lab4.h  check_lab4_priority.c  check_lab4_waitlist.c
PROJECT/: README.md  configure.ac  setup
PROJECT/prototype/: dsp.py  modem.py  signal.py  stream.py  visualizations.py
PROJECT/src/: Makefile.am  encoder.cpp  encoder.hpp  exception.hpp  hash.hpp  medium_alsa.cpp  medium_alsa.hpp  modem.cpp  modem.hpp  modulator_naive.cpp  modulator_naive.hpp  modulator_qam.cpp  modulator_qam.hpp  ofdm.cpp  ofdm.hpp  signal.cpp  signal.hpp  soundfile.cpp  soundfile.hpp  stream_hello.cpp  stream_hello.hpp  stream_text.cpp  stream_text.hpp
